# webassembly-presentation

./: README.md  webassembly.odp
src/: index.html
src/C/: index.js  node.js  sum-cpp.html  sum-cpp.js  sum-emcc-module.js  sum-emcc-module.wasm  sum-emcc.html  sum.c  sum.cpp  sum.wasm
src/Rust/: Cargo.toml  index.js  markdown-parser.js
src/Rust/src/: lib.rs
src/global-var/: extern.wat  global.wasm  global.wat  index.js
src/memory/: index.js  math.wasm  math.wat  memory-alloc.wasm  memory-alloc.wat  static-memory.wasm  static-memory.wat
src/params/: index.js  params.wasm  params.wat
src/strings/: index.js  strings-from.wasm  strings-from.wat  strings-to.wasm  strings-to.wat
src/table/: index.js  table.c  table.wasm  table.wat
src/utils/: index.js  malloc.js
src/wasi/: hello.wasm  hello.wat  index.js
src/wasm-browser/: add.wasm  add.wat  index.js
