[package]
name = "markdown-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.45"
comrak = "0.6"
wee_alloc = {version = "0.4.5", optional = true}

[profile.release]
lto = true
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"

[features]
default = ["wee_alloc"]